Updated images because of issue with database migration

--- a/ds/projects/medizen/assets/dataset_sample.html
+++ b/ds/projects/medizen/assets/dataset_sample.html
@@ -1,6 +1,6 @@
-<table border="1" class="dataframe">
+<table class="dataframe">
   <thead>
-    <tr style="text-align: right;">
+    <tr>
       <th></th>
       <th>strain</th>
       <th>type</th>
@@ -18,7 +18,7 @@
       <td>4.9</td>
       <td>Relaxed,Happy,Euphoric,Uplifted,Creative</td>
       <td>Grape,Citrus,Sweet</td>
-      <td>A strong and fast-acting phenotype of Tahoe OG Kush, Grape Soda by Taste Budz is an excellent evening strain. It provides an idle, heavy-bodied sensation that frees you from worry. The sweet and pungent purple buds give this heady phenotype a very distinct look and flavor. Grape Soda features a pungent citrus aroma with notable grape notes on the palate, and the breeder recommends this strain for depression, anxiety, insomnia, indigestion, inflammation, and minor pain.</td>
+      <td>A strong and fast-acting phenotype...</td>
     </tr>
     <tr>
       <th>356</th>
@@ -27,7 +27,7 @@
       <td>4.7</td>
       <td>Euphoric,Uplifted,Happy,Tingly,Creative</td>
       <td>Blueberry,Berry,Vanilla</td>
-      <td>Bluniverse, also called Blue Universe, is a 50/50 hybrid strain bred by Dynasty Seeds. Mothered by Blue Magoo and fathered by Ms. Universe, Bluniverse inherits a complex flavor profile of blueberry, cherry, and vanilla spice. Its initial effects focus themselves cerebrally, with high-flying euphoria that tapers into pacifying relaxation over time. This hybrid may express one of three different phenotypes, one that takes after Blue Magoo, another taking after Ms. Universe, and a third that exhibits a balance of each parent’s characteristics.</td>
+      <td>Bluniverse, also called Blue...</td>
     </tr>
     <tr>
       <th>369</th>
@@ -36,7 +36,7 @@
       <td>5.0</td>
       <td>Creative</td>
       <td>Sweet</td>
-      <td>Brain Candy by Insanity Strains is a handy hybrid to help get things done. It’s a balanced cross of The Loops, White Widow, and Northern Lights. The onset of this strain is heady and alert, offering positive and motivational energy. These uplifting effects settle down into the body over time and eventually lead to couch-lock with continued consumption. Brain Candy’s arc of effects make it a helpful companion for consumers combating depression and stress.</td>
+      <td>Brain Candy by Insanity Strains...</td>
     </tr>
     <tr>
       <th>387</th>
@@ -45,7 +45,7 @@
       <td>0.0</td>
       <td>None</td>
       <td>None</td>
-      <td>Bubba Hash by Ace Seeds is a stout indica-dominant cross of famous and familiar genetics. This strain’s spear-like colas and dense morphology make it ideal for indoor growers with limited space. A cross between Katsu Bubba and Hash Plant, this pungent strain offers consumers a unique bouquet of hash, coffee, and petrichor alongside notes of skunk and fuel. Bubba Hash has surprisingly clear mental effects while smoothing out anxiety, pain, and restlessness.</td>
+      <td>Bubba Hash by Ace Seeds is a stout...</td>
     </tr>
     <tr>
       <th>992</th>
@@ -54,7 +54,7 @@
       <td>4.4</td>
       <td>Relaxed,Euphoric,Focused,Creative,Happy</td>
       <td>Woody,Citrus,Lemon</td>
-      <td>Harmony is a hybrid that synchronizes the very best of its three parent strains, Santa Marta Colombian Gold, Lemon OG Kush, and Lemon Thai. These tall plants produce flowery, lemon-smelling buds distinctly kush-like in structure. Its effects are invigorating and uplifting, but higher doses might push you into a more spacey experience. Indoor growers wait 8 to 9 weeks for Harmony to flower while outdoor cultivators prepare for harvest in the month of October.</td>
+      <td>Harmony is a hybrid that...</td>
     </tr>
   </tbody>
 </table>
